test/compare/sources/errors/bad-switch1.go


package main

func main() {
	switch false {
	case 0:
		println("zero!")
	}
}
